Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,8 @@
    "outputs": [],
    "source": [
     "# initial variables of our regression line\n",
-    "\n",
+    "b_current = \n",
+    "m\n",
     "\n",
     "#amount to update our variables for our next step\n",
     "\n",
