--- a/index.ipynb
+++ b/index.ipynb
@@ -86,8 +86,8 @@
    "outputs": [],
    "source": [
     "# initial variables of our regression line\n",
-    "b_current = \n",
-    "m\n",
+    "b_current = 0\n",
+    "m_current = 0\n",
     "\n",
     "#amount to update our variables for our next step\n",
     "\n",
