Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,8 @@
     "m_current = 0\n",
     "\n",
     "#amount to update our variables for our next step\n",
-    "\n",
+    "update_to_b = 0 \n",
+    "update_to_m = 0\n",
     "\n",
     "# Define the error_at function\n",
     "\n",
