--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,8 @@
     "update_to_m = 0\n",
     "\n",
     "# Define the error_at function\n",
-    "\n",
+    "def error_at():\n",
+    "    \n",
     "\n",
     "# iterate through data to change update_to_b and update_to_m\n",
     "\n",
