Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "# Define the error_at function\n",
     "def error_at(point, b, m):\n",
-    "    return m* point + b\n",
+    "    return pom* point + b\n",
     "\n",
     "# iterate through data to change update_to_b and update_to_m\n",
     "\n",
