--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,9 @@
     "\n",
     "# iterate through data to change update_to_b and update_to_m\n",
     "\n",
-    "\n",
+    "for i in range(0, len(data)):\n",
+    "    update_to_b += -2*(error_at(data[i], b_current, m_current))\n",
+    "    update_to_m += -2*(error_at(data[i], b_current, m_current))*data[i][1]\n",
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "\n"
