--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,8 @@
     "    update_to_m += -2*(error_at(data[i], b_current, m_current))*data[i][1]\n",
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
-    "\n"
+    "\n",
+    "new_b = b"
    ]
   },
   {
