--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,8 @@
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "\n",
-    "new_b = b"
+    "new_b = b_current - update_to_b\n",
+    "ne"
    ]
   },
   {
