--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "\n",
     "new_b = b_current - update_to_b\n",
-    "ne"
+    "new_m = m_current - update_to_m"
    ]
   },
   {
