--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
     "# iterate through data to change update_to_b and update_to_m\n",
     "\n",
     "for i in range(0, len(data)):\n",
-    "    update_to_b += -2*(error_at(data[i], b_current, m_current))\n",
+    "    update_to_b += (1/len(data)* -2*(error_at(data[i], b_current, m_current))\n",
     "    update_to_m += -2*(error_at(data[i], b_current, m_current))*data[i][1]\n",
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
