--- a/index.ipynb
+++ b/index.ipynb
@@ -153,11 +153,11 @@
     "\n",
     "for i in range(0, len(data)):\n",
     "    update_to_b += (1/len(data)* -2*(error_at(data[i], b_current, m_current))\n",
-    "    update_to_m += -2*(error_at(data[i], b_current, m_current))*data[i][1]\n",
+    "    update_to_m += (1/len(data)* -2*(error_at(data[i], b_current, m_current))*data[i][1]\n",
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "\n",
-    "new_b = b_current - update_to_b\n",
+    "new_b = b_current - learningupdate_to_b\n",
     "new_m = m_current - update_to_m\n"
    ]
   },
