Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-b16656ceb845>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-b16656ceb845>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    update_to_m += (1/len(data)* -2*(error_at(data[i], b_current, m_current))*data[i][1]\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# initial variables of our regression line\n",
     "b_current = 0\n",
@@ -157,8 +166,8 @@
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "\n",
-    "new_b = b_current - learningupdate_to_b\n",
-    "new_m = m_current - update_to_m\n"
+    "new_b = b_current - learning_rate*update_to_b\n",
+    "new_m = m_current - learning_rate*update_to_m\n"
    ]
   },
   {
