Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,15 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-b27ea2a136a7>, line 17)",
+     "ename": "NameError",
+     "evalue": "name 'learning_rate' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-b27ea2a136a7>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    update_to_m += (1/len(data) * -2*(error_at(data[i], b_current, m_current))*data[i][1]\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-51dda52bc223>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# Create new_b and new_m by subtracting the updates from the current estimates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mnew_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb_current\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mupdate_to_b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0mnew_m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mm_current\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mupdate_to_m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'learning_rate' is not defined"
      ]
     }
    ],
@@ -161,8 +164,8 @@
     "# iterate through data to change update_to_b and update_to_m\n",
     "\n",
     "for i in range(0, len(data)):\n",
-    "    update_to_b += (1/len(data) * -2*(error_at(data[i], b_current, m_current))\n",
-    "    update_to_m += (1/len(data) * -2*(error_at(data[i], b_current, m_current))*data[i][1]\n",
+    "    update_to_b += (1/len(data)) * -2*(error_at(data[i], b_current, m_current))\n",
+    "    update_to_m += (1/len(data)) * -2*(error_at(data[i], b_current, m_current)) * data[i][1]\n",
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "\n",
